--- a/app/build.gradle
+++ b/app/build.gradle
@@ -34,6 +34,9 @@ dependencies {
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:2.2.2'
     implementation 'co.zsmb:materialdrawer-kt:1.3.4'
 
+    implementation 'com.mikepenz:google-material-typeface:3.0.1.2.original@aar'
+    implementation 'com.mikepenz:material-design-iconic-typeface:2.2.0.4@aar'
+
     //compile 'com.github.QuadFlask:colorpicker:0.0.13'
     //compile 'com.android.support:design:26.1.0'
 }
