--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,9 +16,10 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".Ajouter">
-
-        </activity>
+        <activity android:name=".Ajouter" />
+        <activity android:name=".Delete" />
+        <activity android:name=".Rechercher" />
+        <activity android:name=".Modifier"></activity>
     </application>
 
 </manifest>
